--- a/D3/D3.tex
+++ b/D3/D3.tex
@@ -104,7 +104,7 @@ This section should provide a detailed class diagram for your application.
         \end{itemize}
   \item Suggested changes to the Analysis Class Diagram.
         \begin{center}
-          \includegraphics[scale=0.1]{ahsan.jpeg}
+          \includegraphics[scale=0.1]{../Images/ahsan.jpeg}
         \end{center}
 \end{itemize}
 
@@ -121,7 +121,7 @@ This section should provide a detailed class diagram for your application.
           \item View Account
         \end{itemize}
         \begin{center}
-          \includegraphics[scale=1.2]{rebecca.png}
+          \includegraphics[scale=1.2]{../Images/rebecca.png}
         \end{center}
 \end{itemize}
 
@@ -140,7 +140,7 @@ This section should provide a detailed class diagram for your application.
           \item Account Error
         \end{itemize}
         \begin{center}
-          \includegraphics[scale=0.7]{ethan.png}
+          \includegraphics[scale=0.7]{../Images/ethan.png}
         \end{center}
 \end{itemize}
 
@@ -161,7 +161,7 @@ This section should provide a detailed class diagram for your application.
         \end{itemize}
   \item Helped with conversion to Latex
         \begin{center}
-          \includegraphics[scale=0.6]{jake.png}
+          \includegraphics[scale=0.6]{../Images/jake.png}
         \end{center}
 \end{itemize}
 
@@ -179,7 +179,7 @@ This section should provide a detailed class diagram for your application.
         \end{itemize}
   \item Helped with conversion to Latex
         \begin{center}
-          \includegraphics[scale=0.2]{omer.jpg}
+          \includegraphics[scale=0.2]{../Images/omer.jpg}
         \end{center}
 \end{itemize}
 
@@ -200,7 +200,7 @@ This section should provide a detailed class diagram for your application.
           \item Account Success (Boundary).
         \end{itemize}
         \begin{center}
-          \includegraphics[scale=0.1]{abdallah.jpg}
+          \includegraphics[scale=0.1]{../Images/abdallah.jpg}
         \end{center}
 \end{itemize}
 % End Section
