--- a/D3/D3.tex
+++ b/D3/D3.tex
@@ -12,6 +12,7 @@
 \usepackage{graphicx}
 \usepackage{extarrows}
 \usepackage{setspace}
+\usepackage{float}
 %------------------------------------------------------------------------------
 
 % Header and Footer
@@ -23,7 +24,7 @@
 
 % Title Details
 %------------------------------------------------------------------------------
-\title{Deliverable \#3 Template}
+\title{Deliverable \#3}
 \author{SE 3A04: Software Design II -- Large System Design}
 \date{}                               
 %------------------------------------------------------------------------------
@@ -33,6 +34,19 @@
 \begin{document}
 
 \maketitle	
+\noindent{\bf Tutorial Number:} T01\\
+{\bf Group Number:} G02 \\
+{\bf Group Members:} 
+\begin{itemize}
+	\item Omer Karo
+	\item Ahsan Muzammil
+	\item Jake Finlay
+	\item Ethan Walsh
+	\item Rebecca Di Filippo
+	\item Abdallah Alqashqish
+\end{itemize}
+
+\newpage
 
 \section{Introduction}
 \label{sec:introduction}
@@ -43,28 +57,21 @@ This section should provide an brief overview of the entire document.
 \subsection{Purpose}
 \label{sub:purpose}
 % Begin SubSection
-\begin{enumerate}[a)]
-	\item Delineate the purpose of the document
-	\item Specify the intended audience for the document
-\end{enumerate}
+This document provides further information on the architecture of the DealCheck system, including
+state chart diagrams, sequence diagrams, and a detailed class diagram.
+This document is intended for internal DealCheck stakeholders, including project managers, software developers, domain experts, and members / investors of the DealCheck team. It is recommended that DealCheck deliverables 1 and 2 are read prior to this and the reader has some basic software technical knowledge.
 % End SubSection
 
 \subsection{System Description}
 \label{sub:system_description}
 % Begin SubSection
-\begin{enumerate}[a)]
-	\item Give a brief description of the system. This could be a paragraph or two to give some context to this document.
-\end{enumerate}
+An overview of the system description and architecture can be found in deliverable 2. This document acts as an extension of deliverable 2, providing more context in the form of detailed diagrams such as state charts, sequence diagrams, and a class diagram.
 % End SubSection
 
 \subsection{Overview}
 \label{sub:overview}
 % Begin SubSection
-\begin{enumerate}[a)]
-	\item Describe what the rest of the document contains 
-	\item Explain how the document is organised
-\end{enumerate}
-
+This document is organized by each individual chart. Section 2 contains state chart diagrams for controller classes, Section 3 contains sequence diagrams, and Section 4 provides a detailed UML class diagram. \newpage
 % End SubSection
 
 % End Section
@@ -72,19 +79,158 @@ This section should provide an brief overview of the entire document.
 \section{State Charts for Controller Classes}
 \label{sec:state_charts_for_controller_classes}
 % Begin Section
-This section should provide a state chart for each controller class for your application.
+This section provides a state chart for each controller class for your application.
+
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.55]{State Diagrams/3A04_state1.png}
+  
+  \textbf{Figure 2.1:} Account Management Controller State Diagram\label{Fig:2.1}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.65]{State Diagrams/3A04_state2.png}
+  
+  \textbf{Figure 2.2:} Car Recommendation Service Controller State Diagram\label{Fig:2.2}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.65]{State Diagrams/3A04_state3.png}
+  
+  \textbf{Figure 2.3:} Deal Report Management Controller: State Diagram\label{Fig:2.3}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.65]{State Diagrams/3A04_state4.png}
+  
+  \textbf{Figure 2.4:} Experts Process Management Controller: State Diagram\label{Fig:2.4}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.65]{State Diagrams/3A04_state5.png}
+  
+  \textbf{Figure 2.5:} Point System Algorithm Expert Controller: State Diagram\label{Fig:2.5}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.65]{State Diagrams/3A04_state6.png}
+  
+  \textbf{Figure 2.6:} AI Expert Controller: State Diagram\label{Fig:2.6}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.65]{State Diagrams/3A04_state7.png}
+  
+  \textbf{Figure 2.7:} External API Service Expert Controller: State Diagram\label{Fig:2.7}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.65]{State Diagrams/3A04_state8.png}
+  
+  \textbf{Figure 2.8:} Experts Service Controller: State Diagram\label{Fig:2.8}
+\end{figure}
 % End Section
 
 \section{Sequence Diagrams}
 \label{sec:sequence_diagrams}
 % Begin Section
-This section should provide a sequence diagram for each use case of your application.
+This section provides a sequence diagram for each use case of the application.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.25]{Sequence Diagrams/request.png}
+  
+  \textbf{Figure 3.1:} Request a Car Deal Valuation: Sequence Diagram\label{Fig:3.1}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.4]{Sequence Diagrams/be4.png}
+  
+  \textbf{Figure 3.2:} Request a Depreciation Curve: Sequence Diagram\label{Fig:3.2}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.4]{Sequence Diagrams/be6.png}
+  
+  \textbf{Figure 3.3:} Request a Car Recommendation: Sequence Diagram \label{Fig:3.3}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.5]{Sequence Diagrams/be8.png}
+  
+  \textbf{Figure 3.4:} Create Account: Sequence Diagram \label{Fig:3.4}
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.5]{Sequence Diagrams/be9.png}
+  
+  \textbf{Figure 3.5:} Login: Sequence Diagram\label{Fig:3.5}
+\end{figure}
+
 % End Section
 
 \section{Detailed Class Diagram}
 \label{sec:detailed_class_diagram}
 % Begin Section
-This section should provide a detailed class diagram for your application.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.08]{Class Diagrams/class_diagram_3.jpg}
+  
+  \textbf{Figure 4.1:} Detailed Class Diagram \label{Fig:4.1}
+
+  Further detail provided in figures 4.1.1 through 4.1.8
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.04]{Class Diagrams/AccountManagementFeatureSplit.jpg}
+  
+  \textbf{Figure 4.1.1:} Detailed Class Diagram1 \label{Fig:4.1.1}
+
+  Figure 4.1.1 is the Account Management related classes, found in the center of Figure 4.1.
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.1]{Class Diagrams/APIFeatureSplit.jpg}
+  
+  \textbf{Figure 4.1.2:} Detailed Class Diagram2 \label{Fig:4.1.2}
+
+  Figure 4.1.2 is the API Management related classes, found in bottom left of Figure 4.1.
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.03]{Class Diagrams/CarRecommendationFeatureSplit.jpg}
+  
+  \textbf{Figure 4.1.3:} Detailed Class Diagram3 \label{Fig:4.1.3}
+
+  Figure 4.1.3 is the Car Recommendation related classes, found on the right of Figure 4.1.
+\end{figure}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.04]{Class Diagrams/DealCheckFeatureSplit.jpg}
+  
+  \textbf{Figure 4.1.4:} Detailed Class Diagram4 \label{Fig:4.1.4}
+
+  Figure 4.1.4 is the Car Deal Checking related classes, found on the left of Figure 4.1.
+\end{figure}
+
+
 % End Section
 
 \appendix
@@ -93,93 +239,80 @@ This section should provide a detailed class diagram for your application.
 % Begin Section
 \subsection{Ahsan Muzammil}
 \begin{itemize}
-  \item Section 3.1: Wrote about the different architecture designs we considered but eliminated.
-  \item Section 3.2: Wrote about each subsystem and how they interact with each other.
-  \item \textbf{Class Responsibility Cards:} Contributed to four CRC cards:
+  \item Section 4: Created the detailed class diagram for the 2 subsystems of DealCheck.
+  \item Section 4: Used draw.io to implement the class diagrams for the Car Recommendation Subsystem and Account Management Subsystem.
+  \item Attended Meeting With Abdallah On March 16th to discuss:
         \begin{itemize}
-          \item View Car Depreciation Curve
-          \item Request Car Recommendation
-          \item Extended AI Service
-          \item View Car Recommendation
+          \item The class diagrams we made
+          \item Suggested changes for both of our class diagrams
+          \item How to merge the two class diagrams together (Car Recommendation and Account Management with DealCheck feature)
+          \item We agreed upon Abdallah merging the two class diagrams into one, using PlantUML
         \end{itemize}
-  \item Suggested changes to the Analysis Class Diagram.
+  \item Looked over the merged Class Diagram on PlantUML and suggested some changes to maintain consistency.
         \begin{center}
-          \includegraphics[scale=0.1]{../Images/ahsan.jpeg}
+          \includegraphics[scale=0.1]{ahsan.jpeg}
         \end{center}
 \end{itemize}
 
 \subsection{Rebecca Di Filippo}
 \begin{itemize}
-  \item Wrote Section 1.1: Purpose of Document
-  \item Wrote Section 1.2:  System Description
-  \item Wrote Section 1.3: Overview of Document
-  \item Contributed 4 Class Responsibility Cards
+   \item Wrote Section 1.1
+   \item Wrote Section 1.2
+   \item Wrote Section 1.3
+    \item Completed 4 state diagrams for controller classes:
         \begin{itemize}
-          \item Registration
-          \item Login
-          \item Account Information
-          \item View Account
+          \item Experts Service Controller
+          \item AI Expert Controller
+          \item External API Expert Controller 
+          \item Point System Algorithm Expert Controller
         \end{itemize}
         \begin{center}
-          \includegraphics[scale=1.2]{../Images/rebecca.png}
+          \includegraphics[scale=0.6]{rebecca.png}
         \end{center}
 \end{itemize}
 
 \subsection{Ethan Walsh}
 \begin{itemize}
-  \item Section 3: Derived initial system diagram.
-  \item Section 3: Proposed edits to updated system diagram.
-  \item Section 3: Wrote initial description of system architecture
-  \item Section 3: Wrote description of used architecture styles and rationale
-  \item Section 3: Wrote part of section 3.2, Subsystems
-  \item Contributed 4 Class Responsibility Cards
+  \item Completed 4 state diagrams for controller classes:
         \begin{itemize}
-          \item Experts Process Management
-          \item Edit Account
-          \item Request Information
-          \item Account Error
+          \item Acount Management Controller
+          \item Car Recommendation Service Controller
+          \item Deal Report Management
+          \item Experts Process Management Controllerr
         \end{itemize}
-        \begin{center}
-          \includegraphics[scale=0.7]{../Images/ethan.png}
+  \item Proposed edits to other controller class state diagrams.
+  \item Performed formatting of diagrams (state, sequence, and class).
+  \item Composed and formatted final document in Latex.
+  \begin{center}
+          \includegraphics[scale=0.4]{ethan.png}
         \end{center}
 \end{itemize}
 
 \subsection{Jake Finlay}
 \begin{itemize}
-  \item Came up with some classes for the initial Analysis Class Diagram
-  \item Contributed 9 Class Responsibility Cards
+  \item Completed 4 sequence diagrams
         \begin{itemize}
-          \item Experts Service
-          \item Point System Algorithm Expert
-          \item External API Service Expert
-          \item Redbook API
-          \item AI Expert
-          \item AI API
-          \item Deal Report Management
-          \item View Car Deal Report
-          \item Save Car Deal Report
+          \item BE1: Request a deal valuation based on drop down menu input
+          \item BE3: Request a deal valuation with text description
+          \item BE5: Request a deal valuation based on text, drop down, and image input
+          \item BE9: Account login
         \end{itemize}
-  \item Helped with conversion to Latex
         \begin{center}
-          \includegraphics[scale=0.6]{../Images/jake.png}
+          \includegraphics[scale=0.6]{jake.png}
         \end{center}
 \end{itemize}
 
 \subsection{Omer Karo}
 \begin{itemize}
-  \item created initial analysis class diagram for the car recommendation service subsystem
-  \item created initial analysis class diagram for the deal report management subsystem
-  \item created initial analysis class diagram for the experts process management
-  \item Contributed 4 Class Responsibility Cards
+  \item Completed 4 sequence diagrams
         \begin{itemize}
-          \item Request Intake
-          \item Response Handler
-          \item Car Recommendation service
-          \item Request Car Depreciation Curve
+          \item BE1: Request a deal valuation based on image and required text input
+          \item BE3: Request a depreciation curve for a previous car deal report
+          \item BE5: Request a car recommendation based on text information provided
+          \item BE9: Account creation
         \end{itemize}
-  \item Helped with conversion to Latex
         \begin{center}
-          \includegraphics[scale=0.2]{../Images/omer.jpg}
+          \includegraphics[scale=0.3]{omer.jpg}
         \end{center}
 \end{itemize}
 
@@ -200,7 +333,7 @@ This section should provide a detailed class diagram for your application.
           \item Account Success (Boundary).
         \end{itemize}
         \begin{center}
-          \includegraphics[scale=0.1]{../Images/abdallah.jpg}
+          \includegraphics[scale=0.1]{abdallah.jpg}
         \end{center}
 \end{itemize}
 % End Section
