Add division of labour with class diagram PUML code

--- a/D3/D3.tex
+++ b/D3/D3.tex
@@ -318,23 +318,20 @@ This section provides a sequence diagram for each use case of the application.
 
 \subsection{Abdallah Alqashqish}
 \begin{itemize}
-  \item Section 2: Collaborated on the Analysis Class Diagram (created and determined initial functionality of)
-        \begin{itemize}
-          \item Account Management Controller.
-          \item Experts service.
-          \item Refactored experts that depend on API to use a controller and boundary.
-        \end{itemize}
-  \item Section 3.1: Refined system architecture diagram to match the final agreed upon architecture.
-  \item Contributed 4 Class Responsibility Cards
-        \begin{itemize}
-          \item Car Recommendation Information (Entity).
-          \item Account Management (Controller).
-          \item Logout (Boundary).
-          \item Account Success (Boundary).
-        \end{itemize}
-        \begin{center}
-          \includegraphics[scale=0.1]{abdallah.jpg}
-        \end{center}
+  \item Section 4: Created detailed class diagram components for the core DealCheck functionality (checking car deals).
+  \item Section 4: Utilized PlantUML to create class diagram for the experts, blackboard, controller of deal checking functionality.
+  \item Attended meeting with Ahsan on March 16, 2025 to discuss the following:
+    \begin{itemize}
+      \item The class diagrams we both made.
+      \item Suggested main class architecture styles using interfaces and abstract classes as contracts.
+      \item Discussed how to enable the different components of the system to communicate with each other (using router API endpoints).
+    \end{itemize}
+  \item Merged the two parts of the system into the final class diagram using PlantUML.
+  \item Created the split (smaller) class diagrams for each component of the system.
+  \item Revised sequence diagrams to ensure consistency with class diagram.
+  \begin{center}
+    \includegraphics[scale=0.1]{abdallah.jpg}
+  \end{center}
 \end{itemize}
 % End Section
 
